<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/dime_10"
    android:weightSum="3"
    tools:context=".Business.Fragment.CreateOfferFragment">


    <LinearLayout
        android:id="@+id/offerLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Upload_Offers_Image"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/offerIv"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:src="@drawable/car3"
        android:layout_marginTop="@dimen/dime_10"
        android:scaleType="fitXY"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:layout_width="@dimen/dime_0"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/Add_Caption"
android:id="@+id/captionET"
            android:layout_marginTop="@dimen/dime_10"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dime_10"
        android:background="@color/blue"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>